...
    <string name="app_name_prefix">myPlanet</string>
    <string name="app_name_suffix">Lite</string>
    <string name="app_version">Version %1$s</string>
    <string name="login_username_label">Username</string>
    <string name="login_password_label">Password</string>
    <string name="login_action">Login</string>
    <string name="login_username_error">Enter your username</string>
    <string name="login_password_error">The password must be at least 4 characters long</string>
    <string name="login_invalid_credentials">Incorrect username or password</string>
    <string name="login_generic_error">Couldn\'t sign in. Please try again.</string>
    <string name="logo">Logo</string>
    <string name="login_signup_prompt">Don\'t have an account?</string>
    <string name="login_signup_action">Sign Up</string>
    <string name="login_privacy_policy_prompt">Read our <font color="@color/login_primary">Privacy Policy</font></string>
    <string name="login_survey_translation_consent_title">Survey translations</string>
...
